infrastructure/envoy/files/envoy.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        # === Echo service ===
                        - match:
                            prefix: "/"
                          route:
                            cluster: service-echo

                http_filters:
                  - name: envoy.filters.http.ext_authz
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      transport_api_version: V3
                      with_request_body:
                        max_request_bytes: 1048576
                        allow_partial_message: true
                        pack_as_bytes: false
                      metadata_context_namespaces:
                        - envoy.filters.http.jwt_authn
                        - envoy.filters.http.rbac
                      typed_metadata_context_namespaces:
                        - envoy.filters.http.jwt_authn
                        - envoy.filters.http.rbac
                      route_metadata_context_namespaces:
                        - envoy.filters.http.ext_authz
                        - envoy.filters.http.router
                      route_typed_metadata_context_namespaces:
                        - envoy.filters.http.ext_authz
                        - envoy.filters.http.router
                      include_peer_certificate: false
                      include_tls_session: false
                      encode_raw_headers: false
                      grpc_service:
                        timeout: 5s
                        envoy_grpc:
                          cluster_name: backend-api-grpc
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: service-echo
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: httpecho
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: service-echo.default.svc.cluster.local
                      port_value: 80

    - name: backend-api-grpc
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: backend-api-grpc
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: backend-api.default.svc.cluster.local
                      port_value: 8000
